# GVINS-Dataset

data/ephemeris_rinex/: bigbag.nav  move_rover.nav  move_rover.obs
toolkit/: CMakeLists.txt
toolkit/config/: topic_rename.yaml
toolkit/launch/: bag2rinex.launch  bag_fuse.launch  bag_topic_rename.launch
toolkit/src/: bag2nav.cpp  bag2rinex.cpp  bag_fuse.cpp  bag_topic_rename.cpp
